--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -277,6 +277,7 @@
     "unknown_account": "Unknown Account",
     "user_hasnt_made_any_posts_yet": "Looks like %(name)s hasn't made any posts yet!",
     "user_hasnt_started_bloggin_yet": "Looks like %(name)s hasn't started blogging yet!",
+    "user_hasnt_started_sharing_yet": "Looks like %(name)s hasn't started sharing yet!",
     "user_hasnt_followed_anything_yet": "Looks like %(name)s might not be following anyone yet! If %(name)s recently added new users to follow, their personalized feed will populate once new content is available.",
     "user_hasnt_had_any_replies_yet": "%(name)s hasn't had any replies yet",
     "looks_like_you_havent_posted_anything_yet": "Looks like you haven't posted anything yet.",
