Replaced user menu icons, added icon for shares

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -96,6 +96,18 @@
     "upvote": "Reward",
     "upvote_post": "Reward post",
     "username": "Username",
+    "usermenu" : {
+      "blog": "Blog",
+      "comments": "Comments",
+      "feed": "feed",
+      "logout": "Logout",
+      "night": "Toggle Night Mode",
+      "password": "Change Password",
+      "replies": "Replies",
+      "settings": "Settings",
+      "shares": "Shares",
+      "wallet": "Wallet"
+    },
     "version": "Version",
     "vote": "Share",
     "votes": "shares",
