Colored user menu icons, fit user profile menu in one row onmobile, minor fixes

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -99,7 +99,7 @@
     "usermenu" : {
       "blog": "Blog",
       "comments": "Comments",
-      "feed": "feed",
+      "feed": "Feed",
       "logout": "Logout",
       "night": "Toggle Night Mode",
       "password": "Change Password",
