Replaced $ with WLS in past payouts dropdown

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -337,9 +337,9 @@
     "pending_payout": "Pending Payout %(value)s WLS",
     "payout_declined": "Payout Declined",
     "max_accepted_payout": "Max Accepted Payout $%(value)s",
-    "past_payouts": "Past Payouts $%(value)s",
-    "past_payouts_author": " - Author $%(value)s",
-    "past_payouts_curators": " - Curators $%(value)s",
+    "past_payouts": "Past Payouts %(value)s WLS",
+    "past_payouts_author": " - Author %(value)s WLS",
+    "past_payouts_curators": " - Curators %(value)s WLS",
     "we_will_reset_curation_rewards_for_this_post": " will reset your curation rewards for this post",
     "removing_your_vote": "Removing your share",
     "changing_to_an_upvote": "Changing to a share",
