Added Spanish lannguage in Settings, edited translations in Spanish

--- a/src/app/locales/en.json
+++ b/src/app/locales/en.json
@@ -12,6 +12,7 @@
     "by": "by",
     "cancel": "Cancel",
     "change_password": "Change Password",
+    "choose_language": "Select Language",
     "clear": "Clear",
     "close": "Close",
     "collapse_or_expand": "Collapse/Expand",
