--- a/src/app/locales/es.json
+++ b/src/app/locales/es.json
@@ -17,6 +17,7 @@
     "close": "Cerrar",
     "collapse_or_expand": "Plegar/Expandir",
     "comments": "Comentarios",
+    "claim_rewards": "Recompensa obtenida ",
     "confirm": "Confirmar",
     "delete": "Borrar",
     "dismiss": "Descartar",
@@ -25,12 +26,12 @@
     "feed": "Favoritos",
     "follow": "Seguir",
     "for": "para",
-    "from": "de",
+    "from": "de ",
     "go_back": "Volver",
     "hide": "Ocultar",
     "in": "en",
     "in_reply_to": "en respuesta a",
-    "joined": "Unió",
+    "joined": "Se unió",
     "loading": "Cargando",
     "login": "Iniciar sesión",
     "logout": "Cerrar sesión",
@@ -45,6 +46,7 @@
     "or": "o",
     "password": "Contraseña",
     "payouts": "Pagos",
+    "people_i_follow": "Usuarios que sigo",
     "permissions": "Permisos",
     "phishy_message": "Link expanded to plain text; beware of a potential phishing attempt",
     "post": "Publicación",
@@ -56,7 +58,7 @@
     "re": "RE",
     "re_to": "RE %(topic)s",
     "recent_password": "Contraseña reciente",
-    "receive": "Recibir",
+    "receive": "Recibir ",
     "remove": "Quitar",
     "remove_vote": "Quitar voto",
     "replied_to": "Respondido a %(account)s",
@@ -99,15 +101,15 @@
     "username": "Nombre de usuario",
     "usermenu" : {
       "blog": "Blog",
-      "comments": "Comments",
+      "comments": "Comentarios",
       "feed": "Feed",
-      "logout": "Logout",
-      "night": "Toggle Night Mode",
-      "password": "Change Password",
-      "replies": "Replies",
-      "settings": "Settings",
-      "shares": "Shares",
-      "wallet": "Wallet"
+      "logout": "Cerrar sesión",
+      "night": "Cambiar al modo nocturno",
+      "password": "Cambiar contraseña",
+      "replies": "Respuestas",
+      "settings": "Ajustes",
+      "shares": "Compartido",
+      "wallet": "Billetera"
     },
     "version": "Versión",
     "vote": "Voto",
@@ -115,6 +117,7 @@
     "wallet": "Monedero",
     "warning": "advertencia",
     "yes": "Sí",
+    "your_current_rewards": "Tus recompensas actuales",
     "posting": "Publicando",
     "owner": "Propietario",
     "active": "Activo",
@@ -161,8 +164,8 @@
     "cannot_increase_reward_of_post_within_the_last_minute_before_payout": "No se puede aumentar la recompensa de la publicación dentro del último minuto antes del pago.",
     "vote_currently_exists_user_must_be_indicate_a_to_reject_witness": "Este voto ya existe, el usuario tiene que quitar el voto al witness",
     "only_one_APP_NAME_account_allowed_per_ip_address_every_10_minutes": "Sólo una cuenta permitida por dirección IP cada 10 minutos",
-    "resteem_this_post": "Reesteemea esta Publicación",
-    "reblog": "Reesteemear",
+    "resteem_this_post": "Recomiendo esta publicación",
+    "reblog": "Recomendar",
     "write_your_story": "Escribe tu historia",
     "remember_voting_and_posting_key": "Recuerda la clave de voto y de publicación",
     "auto_login_question_mark": "¿Acceso automático?",
@@ -207,7 +210,7 @@
   "navigation": {
     "about": "Sobre",
     "explore": "Explorar",
-    "APP_NAME_whitepaper": "%(APP_NAME)s Whale Paper",
+    "APP_NAME_whitepaper": "Documentación técnica de %(APP_NAME)s",
     "stolen_account_recovery": "Recuperación de cuentas robadas",
     "change_account_password": "Cambia la contraseña de la cuenta",
     "witnesses": "Testigos",
@@ -216,11 +219,24 @@
     "sign_up": "Unirse",
     "intro_tagline": "El dinero habla.",
     "intro_paragraph": "Tu voz tiene valor. Únete a la comunidad que te paga por publicar y votar contenido de alta calidad",
-    "explorer": "Blockchain Explorer"
+    "explorer": "Explorador de blockchain",
+    "vote_for_witnesses": "Vota por witness"
   },
   "main_menu": {
     "hot": "en alza",
     "trending": "tendencia"
+  },
+  "sidebar_links": {
+    "quick_links": "Enlaces rapidos",
+    "my_blog": "Mi blog",
+    "my_wallet": "Mi monedero",
+    "my_feed": "Mi feed",
+    "useful": "Util",
+    "claiming_tool": "Herramienta de reclamacion",
+    "crossposting_tool": "Herramienta cross-post",
+    "discord": " Discord de Whaleshares",
+    "telegram": "Telegram de Whaleshares",
+    "whaled": "Explorador WhaleD"
   },
   "reply_editor": {
     "shorten_title": "Abreviar el título",
@@ -233,9 +249,9 @@
     "editor": "Editor",
     "insert_images_by_dragging_dropping": "Inserta imágenes arrastrando y soltando,",
     "pasting_from_the_clipboard": "pegando desde el portapapeles,",
-    "selecting_them": "Seleccionándolos",
+    "selecting_them": "o seleccionándolo",
     "image_upload": "Subir imagen",
-    "power_up_100": "Power Up 100%%",
+    "power_up_100": "Recompensa al 100%%",
     "decline_payout": "Rechazar Pago",
     "check_this_to_auto_upvote_your_post": "Seleciona para autovotarte el post",
     "markdown_styling_guide": "Guía para el Markdown",
@@ -403,11 +419,11 @@
     "after_printing_write_down_your_user_name": "Después de imprimir, escribe tu nombre de usuario"
   },
   "tips_js": {
-    "liquid_token": "Tokens canjeables pueden ser transferidos a cualquier sitio en cualquier momento.1%(LIQUID_TOKEN)s y pueden ser convertidos a %(VESTING_TOKEN)s en un proceso llamado power up.",
+    "liquid_token": "Tokens canjeables que pueden ser transferidos a cualquier sitio y en cualquier momento. Cada %(LIQUID_TOKEN)s puede ser convertido a %(VESTING_TOKEN)s en un proceso llamado power up.",
     "influence_token": "Tokens con influencia te dan más control sobre los pagos de los posts y te permiten ganar recompensas de curación",
     "non_transferable": "%(VESTING_TOKEN)s es intransferible y requiere 3 meses (13 pagos) para convertir de vuelta a %(LIQUID_TOKEN)s.",
     "converted_VESTING_TOKEN_can_be_sent_to_yourself_but_can_not_transfer_again": "Los %(VESTING_TOKEN)s convertidos pueden ser enviados a ti mismo o a otras personas pero no pueden ser transferidos de nuevo sin convertirlos de vuelta a %(LIQUID_TOKEN)s.",
-    "mana": "MANA is the percent of rewarding power your account has. Each time you share/reward a post or comment your MANA is reduced by 2 percent. MANA is recharged at a rate of 20 percent per day. MANA and WHALESTAKE are used to calculate your reward value."
+    "mana": "MANA es el porcentaje de poder de recompensa de tu cuenta. Cada vez que recompensas y compartes un post tu MANA se reduce 2 porciento. El MANA se recupera a una tasa de 20 porciento por día. El MANA y el WHALESTAKE son usados para calcular tu valor de recompensa."
   },
   "promote_post_jsx": {
     "this_post_was_hidden_due_to_low_ratings": "El post ha sido ocultado por bajas calificaciones"
@@ -422,8 +438,8 @@
     "images_were_hidden_due_to_low_ratings": "Las imágenes fueron ocultadas por bajas calificaciones."
   },
   "postsummary_jsx": {
-    "resteemed": "Reesteemeado",
-    "resteemed_by": "Resteemeado por",
+    "resteemed": "Recomendado",
+    "resteemed_by": "Recomendado por",
     "reveal_it": "revelarlo",
     "adjust_your": "ajustar tu",
     "display_preferences": "Visualizar preferencias",
@@ -443,7 +459,7 @@
     "cancel_transfer_from_savings": "Cancela transferencia desde ahorros",
     "stop_power_down": "Para power down",
     "start_power_down_of": "Comenzar power down",
-    "receive_interest_of": "Recibir interés de"
+    "receive_interest_of": "Recibir interés de "
   },
   "explorepost_jsx": {
     "copied": "¡Copiado!",
@@ -542,7 +558,7 @@
     "withdraw_funds_after_the_required_3_day_waiting_period": "Retirada de fondos después del periodo de 3 días de espera",
     "from": "De",
     "to": "Para",
-    "beware_of_spam_and_phishing_links": "Beware of spam and phishing links in transfer memos. Do not open links from users you do not trust. Do not provide your private keys to any third party websites."
+    "beware_of_spam_and_phishing_links": "Tenga cuidado con el spam y los enlaces de phishing en los memos de transferencia. No abra enlaces de usuarios en los que no confíe. No proporcione sus claves privadas a sitios web de terceros."
   },
   "userwallet_jsx": {
     "transfer_to_savings": "Transferir a ahorros",
